--- a/css/GameBoy.css
+++ b/css/GameBoy.css
@@ -1,24 +1,11 @@
 @charset "utf-8";
 html {
-	background-color: rgb(200, 225, 225);
 	background-attachment: fixed;
-	background-repeat: none;
-	background-image: url("../images/gradient_01.svg");
-	background-image: -webkit-linear-gradient(315deg, rgb(200, 200, 255), rgb(200, 255, 200));
-	background-image: -moz-linear-gradient(315deg, rgb(200, 200, 255), rgb(200, 255, 200));
-	background-image: -o-linear-gradient(315deg, rgb(200, 200, 255), rgb(200, 255, 200));
-	background-image: linear-gradient(135deg, rgb(200, 200, 255), rgb(200, 255, 200));
+	background-size: cover;
+	background-repeat: no-repeat;
+	background-image: url("../images/backgold.gif");
 	margin: 0;
 	padding: 0;
-	font-family: arial;
-	margin: 0;
-	padding: 0;
-	overflow: auto;
-	text-align: left;
-	direction: ltr;
-	width: 100%;
-	height: 100%;
-	text-rendering: optimizeSpeed;
 }
 body {
 	width: auto;
@@ -53,13 +40,12 @@ div.window {
 	border-radius: 10px 10px 3px 3px;
 	-webkit-box-shadow: 5px 5px 10px rgb(30, 30, 30);
 	box-shadow: 5px 5px 10px rgb(30, 30, 30);
-	background-color: rgb(200, 200, 200);
 	z-index: 2;
 	opacity: 1;
 }
 div#GameBoy {
-	min-height: 340px;
-	min-width: 400px;
+	min-height: 530px;
+	min-width: 510px;
 }
 div#input_select, div#save_importer {
 	min-height: 100px;
@@ -145,11 +131,8 @@ div#gfx {
 	background-color: rgb(200, 50, 50);
 	background-repeat: repeat-x;
 	background-attachment: scroll;
-	background-image: url("../images/gradient_05.svg");
-	background-image: -webkit-linear-gradient(top, rgb(200, 50, 50), rgb(200, 75, 150));
-	background-image: -moz-linear-gradient(top, rgb(200, 50, 50), rgb(200, 75, 150));
-	background-image: -o-linear-gradient(top, rgb(200, 50, 50), rgb(200, 75, 150));
-	background-image: linear-gradient(top, rgb(200, 50, 50), rgb(200, 75, 150));
+	background-image: url("../images/pokemongold.webp");
+	
 }
 body > div#fullscreenContainer {
 	position: absolute;	/*Fallback here if fixed isn't supported*/
@@ -202,6 +185,7 @@ div#GameBoy > div#gfx > span#title {
 	font-style: italic;
 	z-index: 1;
 	padding: 0 5px 0 0;
+	display: none;
 }
 div#GameBoy > div#gfx > span#port_title {
 	position: absolute;
@@ -213,6 +197,7 @@ div#GameBoy > div#gfx > span#port_title {
 	font-style: italic;
 	font-weight: bold;
 	z-index: 2;
+	display: none;
 	padding: 0 5px 0 0;
 }
 div#about {
