--- a/css/GameBoy.css
+++ b/css/GameBoy.css
@@ -1,12 +1,14 @@
 @charset "utf-8";
+
 html {
 	background-attachment: fixed;
 	background-size: cover;
 	background-repeat: no-repeat;
-	background-image: url("../images/backgold.gif");
+	background-image: url("../images/back3.gif");
 	margin: 0;
 	padding: 0;
 }
+
 body {
 	width: auto;
 	height: auto;
@@ -16,7 +18,11 @@ body {
 	margin: 0;
 	padding: 0;
 }
-div.menubar, div#GameBoy > div#gfx, div.window > div.button_rack, ul.menu {
+
+div.menubar,
+div#GameBoy>div#gfx,
+div.window>div.button_rack,
+ul.menu {
 	-webkit-text-size-adjust: none;
 	-webkit-tap-highlight-color: transparent;
 	-webkit-touch-callout: none;
@@ -25,6 +31,7 @@ div.menubar, div#GameBoy > div#gfx, div.window > div.button_rack, ul.menu {
 	-khtml-user-select: none;
 	user-select: none;
 }
+
 div.window {
 	visibility: visible;
 	display: none;
@@ -43,21 +50,27 @@ div.window {
 	z-index: 2;
 	opacity: 1;
 }
+
 div#GameBoy {
-	min-height: 530px;
-	min-width: 510px;
+	min-height: 370px;
+	min-width: 350px;
 }
-div#input_select, div#save_importer {
+
+div#input_select,
+div#save_importer {
 	min-height: 100px;
 	min-width: 200px;
 }
+
 div#instructions {
 	min-height: 300px;
 	min-width: 400px;
 }
+
 div.menubar {
 	max-height: 28px;
-	min-width: 250px;	/*Fail safe for poopy browsers.*/
+	min-width: 250px;
+	/*Fail safe for poopy browsers.*/
 	display: block;
 	overflow: hidden;
 	position: absolute;
@@ -84,7 +97,8 @@ div.menubar {
 	background-image: -o-linear-gradient(top, rgb(150, 150, 150), rgb(220, 220, 220), rgb(180, 180, 180));
 	background-image: linear-gradient(top, rgb(150, 150, 150), rgb(220, 220, 220), rgb(180, 180, 180));
 }
-div.menubar > span {
+
+div.menubar>span {
 	cursor: pointer;
 	-webkit-border-radius: 5px;
 	border-radius: 5px;
@@ -94,7 +108,8 @@ div.menubar > span {
 	display: inline;
 	display: inline-block;
 }
-div.menubar > span:hover {
+
+div.menubar>span:hover {
 	-webkit-box-shadow: 2px 2px 1px rgb(30, 30, 30);
 	box-shadow: 2px 2px 1px rgb(30, 30, 30);
 	background-color: rgb(160, 160, 160);
@@ -106,7 +121,8 @@ div.menubar > span:hover {
 	background-image: -o-linear-gradient(top, rgb(160, 160, 160), rgb(190, 190, 190), rgb(160, 160, 160));
 	background-image: linear-gradient(top, rgb(160, 160, 160), rgb(190, 190, 190), rgb(160, 160, 160));
 }
-div.menubar > span:active {
+
+div.menubar>span:active {
 	-webkit-box-shadow: inset 2px 2px 1px rgb(30, 30, 30);
 	box-shadow: inset 2px 2px 1px rgb(30, 30, 30);
 	background-color: rgb(220, 220, 220);
@@ -118,6 +134,7 @@ div.menubar > span:active {
 	background-image: -o-linear-gradient(top, rgb(190, 190, 190), rgb(160, 160, 160), rgb(190, 190, 190));
 	background-image: linear-gradient(top, rgb(190, 190, 190), rgb(160, 160, 160), rgb(190, 190, 190));
 }
+
 div#gfx {
 	height: auto;
 	width: auto;
@@ -132,10 +149,12 @@ div#gfx {
 	background-repeat: repeat-x;
 	background-attachment: scroll;
 	background-image: url("../images/pokemongold.webp");
-	
+
 }
-body > div#fullscreenContainer {
-	position: absolute;	/*Fallback here if fixed isn't supported*/
+
+body>div#fullscreenContainer {
+	position: absolute;
+	/*Fallback here if fixed isn't supported*/
 	position: fixed;
 	height: 100%;
 	width: 100%;
@@ -147,14 +166,16 @@ body > div#fullscreenContainer {
 	display: none;
 	z-index: 100;
 }
-body > div#fullscreenContainer > canvas#fullscreen.maximum {
+
+body>div#fullscreenContainer>canvas#fullscreen.maximum {
 	position: static;
 	height: 100%;
 	width: 100%;
 	margin: 0;
 	padding: 0;
 }
-body > div#fullscreenContainer > canvas#fullscreen.minimum {
+
+body>div#fullscreenContainer>canvas#fullscreen.minimum {
 	position: absolute;
 	height: 144px;
 	width: 160px;
@@ -163,7 +184,8 @@ body > div#fullscreenContainer > canvas#fullscreen.minimum {
 	margin: -72px 0 0 -80px;
 	padding: 0;
 }
-div#GameBoy > div#gfx > canvas {
+
+div#GameBoy>div#gfx>canvas {
 	position: absolute;
 	z-index: 5;
 	visibility: hidden;
@@ -175,7 +197,8 @@ div#GameBoy > div#gfx > canvas {
 	height: 100%;
 	background-color: rgb(255, 255, 255);
 }
-div#GameBoy > div#gfx > span#title {
+
+div#GameBoy>div#gfx>span#title {
 	position: absolute;
 	top: 30%;
 	left: 15%;
@@ -187,7 +210,8 @@ div#GameBoy > div#gfx > span#title {
 	padding: 0 5px 0 0;
 	display: none;
 }
-div#GameBoy > div#gfx > span#port_title {
+
+div#GameBoy>div#gfx>span#port_title {
 	position: absolute;
 	top: 45%;
 	left: 55%;
@@ -200,31 +224,43 @@ div#GameBoy > div#gfx > span#port_title {
 	display: none;
 	padding: 0 5px 0 0;
 }
+
 div#about {
 	max-width: 400px;
 	max-height: 350px;
 	min-width: 400px;
 	min-height: 350px;
 }
+
 div#terminal {
 	min-height: 100px;
 	min-width: 310px;
 }
-div#terminal, div#about, div#settings, div#local_storage_listing, div#freeze_listing {
+
+div#terminal,
+div#about,
+div#settings,
+div#local_storage_listing,
+div#freeze_listing {
 	height: 350px;
 	width: 400px;
 }
+
 div#settings {
 	height: 410px;
 }
+
 div#local_storage_popup {
 	height: 250px;
 	width: 300px;
 }
-div#local_storage_listing, div#freeze_listing {
+
+div#local_storage_listing,
+div#freeze_listing {
 	min-width: 400px;
 	min-height: 350px;
 }
+
 div.storageList {
 	position: absolute;
 	top: 10px;
@@ -240,9 +276,11 @@ div.storageList {
 	box-shadow: inset 3px 3px 2px 1px rgb(110, 110, 110);
 	padding: 3px;
 }
+
 div#storageListingMasterContainer {
 	top: 40px !important;
 }
+
 div#download_all_storage {
 	position: absolute;
 	height: 20px;
@@ -258,10 +296,13 @@ div#download_all_storage {
 	box-shadow: inset 3px 3px 2px 1px rgb(110, 110, 110);
 	padding: 3px;
 }
-div.storageList a, div#download_all_storage a {
+
+div.storageList a,
+div#download_all_storage a {
 	color: rgb(210, 210, 210);
 }
-div#terminal > div#terminal_output {
+
+div#terminal>div#terminal_output {
 	background-color: rgb(0, 0, 0);
 	margin: 0;
 	padding: 0;
@@ -277,28 +318,36 @@ div#terminal > div#terminal_output {
 	overflow: auto;
 	text-align: left;
 }
-div#terminal > div#terminal_output > span.white {
+
+div#terminal>div#terminal_output>span.white {
 	color: rgb(255, 255, 255);
 }
-div#terminal > div#terminal_output > span.white:before {
+
+div#terminal>div#terminal_output>span.white:before {
 	content: "<DEBUG> ";
 	font-weight: bold;
 }
-div#terminal > div#terminal_output > span.yellow {
+
+div#terminal>div#terminal_output>span.yellow {
 	color: rgb(255, 255, 0);
 }
-div#terminal > div#terminal_output > span.yellow:before {
+
+div#terminal>div#terminal_output>span.yellow:before {
 	content: "<WARNING> ";
 	font-weight: bold;
 }
-div#terminal > div#terminal_output > span.red {
+
+div#terminal>div#terminal_output>span.red {
 	color: rgb(0, 0, 255);
 }
-div#terminal > div#terminal_output > span.red:before {
+
+div#terminal>div#terminal_output>span.red:before {
 	content: "<ERROR> ";
 	font-weight: bold;
 }
-div#about > div#about_message, div#instructions > div#keycodes {
+
+div#about>div#about_message,
+div#instructions>div#keycodes {
 	position: absolute;
 	top: 10px;
 	left: 3px;
@@ -311,18 +360,21 @@ div#about > div#about_message, div#instructions > div#keycodes {
 	padding: 5px;
 	overflow: auto;
 }
-div#about > div#about_message > h1 {
+
+div#about>div#about_message>h1 {
 	font-size: 20px;
 	color: rgb(80, 60, 20);
 }
-div#settings > div#toggle_settings {
+
+div#settings>div#toggle_settings {
 	position: absolute;
 	top: 10px;
 	left: 3px;
 	right: 3px;
 	bottom: 50px;
 }
-div#settings > div#toggle_settings > div.setting {
+
+div#settings>div#toggle_settings>div.setting {
 	text-align: left;
 	width: 100%;
 	position: relative;
@@ -330,15 +382,18 @@ div#settings > div#toggle_settings > div.setting {
 	padding: 0 0 3px 0;
 	border: none;
 }
-div#settings > div#toggle_settings > div.setting:hover {
+
+div#settings>div#toggle_settings>div.setting:hover {
 	border-bottom-style: dashed;
 	border-bottom-color: rgb(70, 70, 70);
 	border-bottom-width: 1px;
 }
-div#settings > div#toggle_settings > div.setting input {
+
+div#settings>div#toggle_settings>div.setting input {
 	float: right;
 }
-div.window > div.button_rack {
+
+div.window>div.button_rack {
 	background-color: transparent;
 	margin: 0;
 	padding: 0;
@@ -349,7 +404,8 @@ div.window > div.button_rack {
 	left: 3px;
 	text-align: center;
 }
-div.window > div.button_rack > button {
+
+div.window>div.button_rack>button {
 	cursor: pointer;
 	padding: 0;
 	margin: 0;
@@ -359,15 +415,19 @@ div.window > div.button_rack > button {
 	font-size: 14px;
 	position: relative;
 }
-div.window > div.button_rack > button.left {
+
+div.window>div.button_rack>button.left {
 	float: left;
 }
-div.window > div.button_rack > button.right {
+
+div.window>div.button_rack>button.right {
 	float: right;
 }
-div.window > div.button_rack > button.center {
+
+div.window>div.button_rack>button.center {
 	width: 100%;
 }
+
 ul.menu {
 	list-style-position: inside;
 	position: absolute;
@@ -403,16 +463,19 @@ ul.menu {
 	border-right-color: rgb(50, 50, 50);
 	overflow: visible;
 }
+
 ul.menu:hover {
 	display: block;
 	display: inline-block;
 	top: 0;
 	left: 0;
 }
-ul.menu > li {
+
+ul.menu>li {
 	display: block;
 	position: relative;
-	margin: 0 0 -1px 0;	/*Firefox DOM mouseover bug*/
+	margin: 0 0 -1px 0;
+	/*Firefox DOM mouseover bug*/
 	padding: 2px 5px 2px 15px;
 	color: rgb(0, 0, 0);
 	background-color: transparent;
@@ -422,14 +485,46 @@ ul.menu > li {
 	overflow: visible;
 	text-overflow: ellipsis;
 }
-ul.menu > li:hover {
+
+ul.menu>li:hover {
 	background-color: transparent;
 	background-color: rgb(255, 255, 200);
 	background-color: rgba(255, 255, 200, 0.3);
 }
-ul.menu > li:hover > ul.menu {
+
+ul.menu>li:hover>ul.menu {
 	left: 220px;
 	top: 0;
 	display: block;
 	display: inline-block;
+}
+
+#banner {
+	width: 100%;
+	justify-content: center;
+}
+
+#banner-image {
+	display: block;
+	margin-left: auto;
+	margin-right: auto;
+	width: 480px;
+}
+
+#header {
+	margin-top: -50px;
+	text-align: center;
+}
+#social {
+	text-align: center;
+}
+#socialicon {
+	width: 30px;
+	height: 30px;
+	margin-top: -20px;
+}
+#playbutton {
+	width: 200px;
+	height: 50px;
+	margin-top: -20px;
 }
